--- a/config-data/ventas-service.yml
+++ b/config-data/ventas-service.yml
@@ -18,3 +18,10 @@ spring:
     url: jdbc:mysql://localhost:3306/ventas
     username: root
     password:
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8090/eureka
+  instance:
+    hostname: localhost
