--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -29,6 +29,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.3</version>
         </dependency>
 
         <dependency>
