--- a/config-data/msinv-service.yml
+++ b/config-data/msinv-service.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8087
+  port: 8082
 springdoc:
   api-docs:
     enabled: true
@@ -22,3 +22,13 @@ eureka:
       defaultZone: http://localhost:8089/eureka
   instance:
     hostname: localhost
+
+resilience4j.circuitbreaker:
+  instances:
+    pedidoListarPorIdCB:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: TIME_BASED
+      minimumNumberOfCalls: 4
+      waitDurationInOpenState: 5s
