--- a/msinv/msinv/pom.xml
+++ b/msinv/msinv/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>4.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
