--- a/config-data/auth-service.yml
+++ b/config-data/auth-service.yml
@@ -7,7 +7,7 @@ spring:
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ms_auth
+    url: jdbc:mysql://localhost:3306/auth
     username: root
     password:
 
